# video_face_recognition

./: .gitignore  LICENSE  README.md  README.rst  pyproject.toml
src/: FrameExtractor.py  FrameHandler.py  VLCPlayer.py  VideoPlayerWindow.py  start.py
src/VideoPlayer/: VideoPlayerWindow.py  __init__.py
video_player/: EncodingManager.py  FrameHandler.py  VLCPlayer.py  VideoPlayerWindow.py  __init__.py
